--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-dev-client": "~5.0.13",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "^16.0.1",
     "expo-router": "~4.0.18",
@@ -35,6 +36,7 @@
     "expo-web-browser": "~14.0.2",
     "i18n-js": "^4.5.1",
     "i18next": "^24.2.3",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.1",
@@ -46,8 +48,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-linear-gradient": "~14.0.2",
-    "lottie-react-native": "7.1.0"
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
